--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "kameleoon-test-quiz",
+  "homepage": "https://lmm1ng.github.io/kameleoon-test-quiz",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,11 +9,16 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
     "prettier": "^2.1.2",
+    "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
